streamlit implementation successful !!!

--- a/structured_code.ipynb
+++ b/structured_code.ipynb
@@ -1574,58 +1574,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72b494a2-c031-4dbe-a5e4-f85cbf5060da",
+   "id": "5087a821-0ee3-4ecf-97c5-8ac668d83a3b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import streamlit as st\n",
-    "import cv2\n",
-    "import numpy as np\n",
-    "import tempfile\n",
-    "import os\n",
     "import requests\n",
-    "from io import BytesIO\n",
     "\n",
-    "# API Endpoint (Replace with your actual API URL)\n",
-    "API_URL = \"http://localhost:8000/results/process_documents/\"\n",
-    "\n",
-    "def capture_webcam_image():\n",
-    "    \"\"\"Captures an image from the webcam and returns it as a NumPy array.\"\"\"\n",
-    "    cap = cv2.VideoCapture(0)  # 0 for default webcam\n",
-    "\n",
-    "    if not cap.isOpened():\n",
-    "        st.error(\"Could not access webcam.\")\n",
-    "        return None\n",
-    "\n",
-    "    st.write(\"Press 'Capture Image' when ready.\")\n",
-    "\n",
-    "    frame_placeholder = st.empty()\n",
-    "    capture_button = st.button(\"Capture Image\")\n",
-    "\n",
-    "    while True:\n",
-    "        ret, frame = cap.read()\n",
-    "        if not ret:\n",
-    "            st.error(\"Failed to grab frame.\")\n",
-    "            break\n",
-    "\n",
-    "        # Convert BGR (OpenCV format) to RGB\n",
-    "        frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
-    "        frame_placeholder.image(frame_rgb, channels=\"RGB\")\n",
-    "\n",
-    "        if capture_button:\n",
-    "            cap.release()\n",
-    "            return frame_rgb  # Return captured image\n",
-    "\n",
-    "    cap.release()\n",
-    "    return None\n",
-    "\n",
-    "def convert_image_to_bytes(image):\n",
-    "    \"\"\"Converts an image (NumPy array) to byte data.\"\"\"\n",
-    "    _, buffer = cv2.imencode(\".jpg\", cv2.cvtColor(image, cv2.COLOR_RGB2BGR))\n",
-    "    return BytesIO(buffer.tobytes())\n",
+    "# API Endpoint (Update if different)\n",
+    "API_URL = \"http://localhost:8000/results/proces s_documents/\"\n",
     "\n",
     "def send_images_to_api(live_image, pan_image, adhar_image):\n",
-    "    \"\"\"Sends all three images to the API.\"\"\"\n",
+    "    \"\"\"Sends uploaded images to FastAPI endpoint.\"\"\"\n",
+    "    \n",
+    "    # Prepare files for API request\n",
     "    files = {\n",
     "        \"live_image\": (\"live.jpg\", live_image, \"image/jpeg\"),\n",
     "        \"pan_image\": (\"pan.jpg\", pan_image, \"image/jpeg\"),\n",
@@ -1640,39 +1602,28 @@
     "        return {\"error\": f\"API request failed with status code {response.status_code}\"}\n",
     "\n",
     "def main():\n",
-    "    st.title(\"KYC Verification System\")\n",
+    "    st.title(\"📄 KYC Verification System\")\n",
     "\n",
-    "    # Capture Live Image\n",
-    "    st.subheader(\"Step 1: Capture Live Image\")\n",
-    "    if st.button(\"Take Picture\"):\n",
-    "        st.session_state.live_image = capture_webcam_image()\n",
+    "    # Upload Images\n",
+    "    st.subheader(\"📤 Upload Required Documents\")\n",
     "\n",
-    "    if \"live_image\" in st.session_state and st.session_state.live_image is not None:\n",
-    "        st.image(st.session_state.live_image, caption=\"Captured Live Image\", channels=\"RGB\")\n",
+    "    live_image = st.file_uploader(\"Upload Live Image\", type=[\"jpg\", \"png\", \"jpeg\"])\n",
+    "    pan_image = st.file_uploader(\"Upload PAN Card Image\", type=[\"jpg\", \"png\", \"jpeg\"])\n",
+    "    adhar_image = st.file_uploader(\"Upload Aadhaar Card Image\", type=[\"jpg\", \"png\", \"jpeg\"])\n",
     "\n",
-    "    # Upload Aadhaar and PAN Images\n",
-    "    st.subheader(\"Step 2: Upload Aadhaar & PAN Images\")\n",
-    "    uploaded_adhar = st.file_uploader(\"Upload Aadhaar Image\", type=[\"jpg\", \"png\", \"jpeg\"])\n",
-    "    uploaded_pan = st.file_uploader(\"Upload PAN Image\", type=[\"jpg\", \"png\", \"jpeg\"])\n",
+    "    # Submit Button\n",
+    "    if st.button(\"Submit for Verification\"):\n",
+    "        if live_image and pan_image and adhar_image:\n",
+    "            st.write(\"📡 Sending images to API...\")\n",
     "\n",
-    "    # Submit to API\n",
-    "    if st.button(\"Submit KYC\") and \"live_image\" in st.session_state:\n",
-    "        if uploaded_adhar and uploaded_pan:\n",
-    "            # Convert live image to bytes\n",
-    "            live_image_bytes = convert_image_to_bytes(st.session_state.live_image)\n",
+    "            # Read image bytes\n",
+    "            response = send_images_to_api(live_image.read(), pan_image.read(), adhar_image.read())\n",
     "\n",
-    "            # Read uploaded images as bytes\n",
-    "            adhar_bytes = uploaded_adhar.read()\n",
-    "            pan_bytes = uploaded_pan.read()\n",
-    "\n",
-    "            # Send to API\n",
-    "            response = send_images_to_api(live_image_bytes, pan_bytes, adhar_bytes)\n",
-    "\n",
-    "            # Display API Response\n",
-    "            st.subheader(\"API Response:\")\n",
+    "            # Display API response\n",
+    "            st.subheader(\"✅ API Response:\")\n",
     "            st.json(response)\n",
     "        else:\n",
-    "            st.error(\"Please upload Aadhaar and PAN images.\")\n",
+    "            st.error(\"❌ Please upload all three images before submitting.\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
@@ -1681,10 +1632,233 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5087a821-0ee3-4ecf-97c5-8ac668d83a3b",
+   "id": "f292c683-be80-4077-9a6f-7d0a9c96a79b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import streamlit as st\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "from app.backend.utlis.logging_config import get_logger\n",
+    "logger=get_logger(__name__)\n",
+    "\n",
+    "# Initialize session state variables\n",
+    "if \"captured_image_bytes\" not in st.session_state:\n",
+    "    st.session_state.captured_image_bytes = None\n",
+    "if \"pan_upload\" not in st.session_state:\n",
+    "    st.session_state.pan_upload = None\n",
+    "if \"adhar_upload\" not in st.session_state:\n",
+    "    st.session_state.adhar_upload = None\n",
+    "if \"image_captured\" not in st.session_state:\n",
+    "    st.session_state.image_captured = False\n",
+    "\n",
+    "# Function to capture an image from webcam\n",
+    "def capture_image():\n",
+    "    logger.info(\"Attempting to access webcam\")\n",
+    "    cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "    if not cap.isOpened():\n",
+    "        logger.error(\"Webcam not found or could not be accessed\")\n",
+    "        st.error(\"Webcam not accessible. Please allow camera access.\")\n",
+    "        return\n",
+    "\n",
+    "    ret, frame = cap.read()\n",
+    "    cap.release()\n",
+    "\n",
+    "    if ret:\n",
+    "        frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "        _, buffer = cv2.imencode(\".jpg\", frame_rgb)  # Convert to JPEG\n",
+    "        st.session_state.captured_image_bytes = buffer.tobytes()  # Store in session state\n",
+    "        st.session_state.image_captured = True  # Mark as captured\n",
+    "        st.image(frame_rgb, caption=\"Captured Image\", use_column_width=True)\n",
+    "        logger.info(\"Image captured and stored in session state\")\n",
+    "    else:\n",
+    "        logger.error(\"Failed to capture image from webcam\")\n",
+    "\n",
+    "# UI Layout\n",
+    "st.title(\"Document Upload Portal\")\n",
+    "\n",
+    "# Capture Image Button\n",
+    "if st.button(\"Capture Image\"):\n",
+    "    capture_image()\n",
+    "\n",
+    "# File uploaders\n",
+    "pan_upload = st.file_uploader(\"Upload PAN Card\", type=[\"jpg\", \"png\", \"jpeg\"])\n",
+    "if pan_upload:\n",
+    "    st.session_state.pan_upload = pan_upload\n",
+    "    logger.info(\"PAN card uploaded successfully\")\n",
+    "\n",
+    "adhar_upload = st.file_uploader(\"Upload Aadhaar Card\", type=[\"jpg\", \"png\", \"jpeg\"])\n",
+    "if adhar_upload:\n",
+    "    st.session_state.adhar_upload = adhar_upload\n",
+    "    logger.info(\"Aadhaar card uploaded successfully\")\n",
+    "\n",
+    "# Submit button\n",
+    "if st.button(\"Submit\"):\n",
+    "    logger.info(f\"Captured Image in session: {st.session_state.get('captured_image_bytes') is not None}\")\n",
+    "    logger.info(f\"PAN Image uploaded: {st.session_state.pan_upload is not None}\")\n",
+    "    logger.info(f\"Aadhaar Image uploaded: {st.session_state.adhar_upload is not None}\")\n",
+    "\n",
+    "    # Check if all images are available\n",
+    "    if st.session_state.get(\"captured_image_bytes\") and st.session_state.pan_upload and st.session_state.adhar_upload:\n",
+    "        st.success(\"✅ Submission successful! All required documents uploaded.\")\n",
+    "        logger.info(\"✅ Submission successful!\")\n",
+    "    else:\n",
+    "        st.error(\"❌ Submission failed - One or more images missing\")\n",
+    "        logger.error(\"❌ Submission failed - One or more images missing\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74d83b2e-2c70-4776-b346-abdabcb645d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import streamlit as st\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import requests\n",
+    "from io import BytesIO\n",
+    "from PIL import Image\n",
+    "from app.logging_config import get_logger\n",
+    "\n",
+    "# Initialize Logger\n",
+    "logger = get_logger(__name__)\n",
+    "\n",
+    "# FastAPI API URL\n",
+    "API_URL = \"http://localhost:8000/results/process_documents/\"\n",
+    "\n",
+    "# Initialize session state variables\n",
+    "if \"captured_image_bytes\" not in st.session_state:\n",
+    "    st.session_state.captured_image_bytes = None\n",
+    "if \"pan_upload\" not in st.session_state:\n",
+    "    st.session_state.pan_upload = None\n",
+    "if \"adhar_upload\" not in st.session_state:\n",
+    "    st.session_state.adhar_upload = None\n",
+    "if \"image_captured\" not in st.session_state:\n",
+    "    st.session_state.image_captured = False\n",
+    "if \"submitted\" not in st.session_state:\n",
+    "    st.session_state.submitted = False  # Prevent multiple submissions\n",
+    "\n",
+    "# Function to capture an image from the webcam\n",
+    "def capture_image():\n",
+    "    logger.info(\"📸 Attempting to capture live image from webcam...\")\n",
+    "    st.write(\"📸 Capturing image from webcam...\")\n",
+    "    \n",
+    "    cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "    if not cap.isOpened():\n",
+    "        st.error(\"❌ Webcam not accessible. Please allow camera access.\")\n",
+    "        logger.error(\"❌ Webcam not accessible. Check permissions or connection.\")\n",
+    "        return\n",
+    "\n",
+    "    ret, frame = cap.read()\n",
+    "    cap.release()\n",
+    "\n",
+    "    if ret:\n",
+    "        logger.info(\"✅ Successfully captured image from webcam.\")\n",
+    "        frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "        _, buffer = cv2.imencode(\".jpg\", frame_rgb)  # Convert to JPEG\n",
+    "        st.session_state.captured_image_bytes = buffer.tobytes()  # Store in session state\n",
+    "        st.session_state.image_captured = True  # Mark as captured\n",
+    "\n",
+    "        st.image(frame_rgb, caption=\"📷 Captured Live Image\", use_column_width=True)\n",
+    "        st.success(\"✅ Image captured successfully!\")\n",
+    "    else:\n",
+    "        st.error(\"❌ Failed to capture image from webcam.\")\n",
+    "        logger.error(\"❌ Failed to capture image from webcam.\")\n",
+    "\n",
+    "# Function to send images to FastAPI backend (Synchronous)\n",
+    "def send_images_to_api():\n",
+    "    if st.session_state.submitted:\n",
+    "        st.warning(\"⚠️ Submission already in progress. Please wait...\")\n",
+    "        logger.warning(\"⚠️ Submission already in progress. Preventing duplicate requests.\")\n",
+    "        return\n",
+    "\n",
+    "    logger.info(\"🚀 Preparing to send images to API...\")\n",
+    "\n",
+    "    if not st.session_state.captured_image_bytes or not st.session_state.pan_upload or not st.session_state.adhar_upload:\n",
+    "        st.error(\"❌ Submission failed - Please upload all required images\")\n",
+    "        logger.error(\"❌ Missing images. Submission aborted.\")\n",
+    "        return\n",
+    "\n",
+    "    st.session_state.submitted = True  # Prevent multiple submissions\n",
+    "\n",
+    "    # Convert images to file-like objects\n",
+    "    files = {\n",
+    "        \"pan_image\": (\"pan.jpg\", st.session_state.pan_upload.getvalue(), \"image/jpeg\"),\n",
+    "        \"adhar_image\": (\"adhar.jpg\", st.session_state.adhar_upload.getvalue(), \"image/jpeg\"),\n",
+    "        \"live_image\": (\"live.jpg\", BytesIO(st.session_state.captured_image_bytes), \"image/jpeg\"),\n",
+    "    }\n",
+    "\n",
+    "    logger.info(\"📤 Sending images to FastAPI endpoint...\")\n",
+    "\n",
+    "    # Send request to API\n",
+    "    try:\n",
+    "        response = requests.post(API_URL, files=files)\n",
+    "        logger.info(f\"✅ API Response Received with status code {response.status_code}\")\n",
+    "\n",
+    "        if response.status_code == 200:\n",
+    "            result = response.json()\n",
+    "            st.success(\"✅ Documents processed successfully!\")\n",
+    "\n",
+    "            # Display results\n",
+    "            st.subheader(\"📜 OCR Results\")\n",
+    "            st.write(f\"**PAN OCR:** {result.get('pan_ocr', 'N/A')}\")\n",
+    "            st.write(f\"**Aadhar OCR:** {result.get('adhar_ocr', 'N/A')}\")\n",
+    "\n",
+    "            logger.info(\"✅ OCR Results displayed.\")\n",
+    "\n",
+    "            st.subheader(\"🆔 Face Match Results\")\n",
+    "            face_match_adhar = result.get(\"face_match_with_adhar\", {})\n",
+    "            face_match_pan = result.get(\"face_match_with_pan\", {})\n",
+    "\n",
+    "            st.write(f\"**Face Match with Aadhaar:** {'✅ Matched' if face_match_adhar.get('match') else '❌ Not Matched'}\")\n",
+    "            st.write(f\"**Match Score (Aadhaar):** {face_match_adhar.get('score', 'N/A')}\")\n",
+    "\n",
+    "            st.write(f\"**Face Match with PAN:** {'✅ Matched' if face_match_pan.get('match') else '❌ Not Matched'}\")\n",
+    "            st.write(f\"**Match Score (PAN):** {face_match_pan.get('score', 'N/A')}\")\n",
+    "\n",
+    "            logger.info(\"✅ Face match results displayed.\")\n",
+    "\n",
+    "        else:\n",
+    "            st.error(f\"❌ Failed to process documents: {response.text}\")\n",
+    "            logger.error(f\"❌ API Error: {response.text}\")\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        st.error(f\"❌ Error: {e}\")\n",
+    "        logger.error(f\"❌ Exception while sending request to API: {e}\")\n",
+    "\n",
+    "    st.session_state.submitted = False  # Reset submission state\n",
+    "    logger.info(\"🔄 Submission state reset.\")\n",
+    "\n",
+    "# Streamlit UI Layout\n",
+    "st.title(\"📄 Document Upload Portal\")\n",
+    "logger.info(\"🎬 Streamlit UI loaded.\")\n",
+    "\n",
+    "# Capture Image Button\n",
+    "if st.button(\"📸 Capture Live Image\"):\n",
+    "    logger.info(\"🛑 Capture Live Image button clicked.\")\n",
+    "    capture_image()\n",
+    "\n",
+    "# File uploaders for PAN and Aadhaar\n",
+    "pan_upload = st.file_uploader(\"🆔 Upload PAN Card\", type=[\"jpg\", \"png\", \"jpeg\"])\n",
+    "if pan_upload:\n",
+    "    st.session_state.pan_upload = pan_upload\n",
+    "    logger.info(\"📂 PAN image uploaded.\")\n",
+    "\n",
+    "adhar_upload = st.file_uploader(\"🆔 Upload Aadhaar Card\", type=[\"jpg\", \"png\", \"jpeg\"])\n",
+    "if adhar_upload:\n",
+    "    st.session_state.adhar_upload = adhar_upload\n",
+    "    logger.info(\"📂 Aadhaar image uploaded.\")\n",
+    "\n",
+    "# Submit button\n",
+    "if st.button(\"🚀 Submit to API\"):\n",
+    "    logger.info(\"🛑 Submit button clicked. Processing...\")\n",
+    "    st.write(\"📤 Sending data to API... Please wait.\")\n",
+    "    send_images_to_api()  # Synchronous API call\n"
+   ]
   }
  ],
  "metadata": {
