--- a/structured_code.ipynb
+++ b/structured_code.ipynb
@@ -1859,6 +1859,211 @@
     "    st.write(\"📤 Sending data to API... Please wait.\")\n",
     "    send_images_to_api()  # Synchronous API call\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cb376dd0-c14b-4f33-9b77-82976ea85528",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package                      Version\n",
+      "---------------------------- ---------------\n",
+      "absl-py                      2.1.0\n",
+      "addict                       2.4.0\n",
+      "altair                       5.5.0\n",
+      "annotated-types              0.7.0\n",
+      "anyio                        4.8.0\n",
+      "asttokens                    2.0.5\n",
+      "astunparse                   1.6.3\n",
+      "attrs                        24.3.0\n",
+      "basicsr                      1.4.2\n",
+      "beautifulsoup4               4.13.0\n",
+      "blinker                      1.9.0\n",
+      "cachetools                   5.5.1\n",
+      "certifi                      2024.12.14\n",
+      "cffi                         1.17.1\n",
+      "charset-normalizer           3.4.1\n",
+      "click                        8.1.8\n",
+      "colorama                     0.4.6\n",
+      "comm                         0.2.1\n",
+      "contourpy                    1.3.1\n",
+      "cycler                       0.12.1\n",
+      "debugpy                      1.8.11\n",
+      "decorator                    5.1.1\n",
+      "deepface                     0.0.93\n",
+      "easyocr                      1.7.2\n",
+      "editdistance                 0.8.1\n",
+      "efficientnet                 1.0.0\n",
+      "essential-generators         1.0\n",
+      "executing                    0.8.3\n",
+      "facexlib                     0.3.0\n",
+      "fastapi                      0.115.8\n",
+      "filelock                     3.17.0\n",
+      "filterpy                     1.4.5\n",
+      "fire                         0.7.0\n",
+      "Flask                        3.1.0\n",
+      "Flask-Cors                   5.0.0\n",
+      "flatbuffers                  25.1.24\n",
+      "fonttools                    4.55.6\n",
+      "fsspec                       2024.12.0\n",
+      "future                       1.0.0\n",
+      "gast                         0.6.0\n",
+      "gdown                        5.2.0\n",
+      "gfpgan                       1.3.8\n",
+      "gitdb                        4.0.12\n",
+      "GitPython                    3.1.44\n",
+      "google-auth                  2.38.0\n",
+      "google-auth-oauthlib         1.2.1\n",
+      "google-pasta                 0.2.0\n",
+      "grpcio                       1.70.0\n",
+      "gunicorn                     23.0.0\n",
+      "h11                          0.14.0\n",
+      "h5py                         3.12.1\n",
+      "idna                         3.10\n",
+      "imageio                      2.37.0\n",
+      "imgaug                       0.4.0\n",
+      "ipykernel                    6.29.5\n",
+      "ipython                      8.30.0\n",
+      "itsdangerous                 2.2.0\n",
+      "jax                          0.5.0\n",
+      "jaxlib                       0.5.0\n",
+      "jedi                         0.19.2\n",
+      "Jinja2                       3.1.5\n",
+      "joblib                       1.4.2\n",
+      "jsonschema                   4.23.0\n",
+      "jsonschema-specifications    2024.10.1\n",
+      "jupyter_client               8.6.3\n",
+      "jupyter_core                 5.7.2\n",
+      "keras                        3.8.0\n",
+      "Keras-Applications           1.0.8\n",
+      "keras-facenet                0.3.2\n",
+      "keras-ocr                    0.9.3\n",
+      "kiwisolver                   1.4.8\n",
+      "lazy_loader                  0.4\n",
+      "libclang                     18.1.1\n",
+      "llvmlite                     0.44.0\n",
+      "lmdb                         1.6.2\n",
+      "lz4                          4.3.3\n",
+      "Markdown                     3.7\n",
+      "markdown-it-py               3.0.0\n",
+      "MarkupSafe                   3.0.2\n",
+      "matplotlib                   3.10.0\n",
+      "matplotlib-inline            0.1.6\n",
+      "mdurl                        0.1.2\n",
+      "mediapipe                    0.10.20\n",
+      "ml-dtypes                    0.4.1\n",
+      "mpmath                       1.3.0\n",
+      "mtcnn                        1.0.0\n",
+      "namex                        0.0.8\n",
+      "narwhals                     1.26.0\n",
+      "nest-asyncio                 1.6.0\n",
+      "networkx                     3.4.2\n",
+      "ninja                        1.11.1.3\n",
+      "numba                        0.61.0\n",
+      "numpy                        1.26.4\n",
+      "oauthlib                     3.2.2\n",
+      "opencv-contrib-python        4.11.0.86\n",
+      "opencv-python                4.11.0.86\n",
+      "opencv-python-headless       4.11.0.86\n",
+      "opt_einsum                   3.4.0\n",
+      "optree                       0.14.0\n",
+      "packaging                    24.2\n",
+      "pandas                       2.2.3\n",
+      "parso                        0.8.4\n",
+      "pillow                       11.1.0\n",
+      "pip                          24.2\n",
+      "platformdirs                 3.10.0\n",
+      "prompt-toolkit               3.0.43\n",
+      "protobuf                     4.25.6\n",
+      "psutil                       5.9.0\n",
+      "pure-eval                    0.2.2\n",
+      "pyarrow                      19.0.0\n",
+      "pyasn1                       0.6.1\n",
+      "pyasn1_modules               0.4.1\n",
+      "pyclipper                    1.3.0.post6\n",
+      "pycparser                    2.22\n",
+      "pydantic                     2.10.6\n",
+      "pydantic_core                2.27.2\n",
+      "pydeck                       0.9.1\n",
+      "Pygments                     2.15.1\n",
+      "pyparsing                    3.2.1\n",
+      "PySocks                      1.7.1\n",
+      "python-bidi                  0.6.3\n",
+      "python-dateutil              2.9.0.post0\n",
+      "python-multipart             0.0.20\n",
+      "pytz                         2025.1\n",
+      "pywin32                      308\n",
+      "PyYAML                       6.0.2\n",
+      "pyzmq                        26.2.0\n",
+      "realesrgan                   0.3.0\n",
+      "referencing                  0.36.2\n",
+      "requests                     2.32.3\n",
+      "requests-oauthlib            2.0.0\n",
+      "retina-face                  0.0.17\n",
+      "rich                         13.9.4\n",
+      "rpds-py                      0.22.3\n",
+      "rsa                          4.9\n",
+      "scikit-image                 0.25.0\n",
+      "scipy                        1.15.1\n",
+      "sentencepiece                0.2.0\n",
+      "setuptools                   75.1.0\n",
+      "shapely                      2.0.6\n",
+      "six                          1.16.0\n",
+      "smmap                        5.0.2\n",
+      "sniffio                      1.3.1\n",
+      "sounddevice                  0.5.1\n",
+      "soupsieve                    2.6\n",
+      "stack-data                   0.2.0\n",
+      "starlette                    0.45.3\n",
+      "streamlit                    1.42.0\n",
+      "sympy                        1.13.1\n",
+      "tb-nightly                   2.19.0a20250126\n",
+      "tenacity                     9.0.0\n",
+      "tensorboard                  2.18.0\n",
+      "tensorboard-data-server      0.7.2\n",
+      "tensorflow                   2.18.0\n",
+      "tensorflow-estimator         2.15.0\n",
+      "tensorflow-hub               0.16.1\n",
+      "tensorflow_intel             2.18.0\n",
+      "tensorflow-io-gcs-filesystem 0.31.0\n",
+      "termcolor                    2.5.0\n",
+      "tf_keras                     2.18.0\n",
+      "tifffile                     2025.1.10\n",
+      "toml                         0.10.2\n",
+      "torch                        2.5.1\n",
+      "torchvision                  0.20.1\n",
+      "tornado                      6.4.2\n",
+      "tqdm                         4.67.1\n",
+      "traitlets                    5.14.3\n",
+      "typing_extensions            4.12.2\n",
+      "tzdata                       2025.1\n",
+      "urllib3                      2.3.0\n",
+      "uvicorn                      0.34.0\n",
+      "validators                   0.34.0\n",
+      "watchdog                     6.0.0\n",
+      "wcwidth                      0.2.5\n",
+      "Werkzeug                     3.1.3\n",
+      "wheel                        0.44.0\n",
+      "wrapt                        1.14.1\n",
+      "yapf                         0.43.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13a623d8-98c5-4b90-a01c-a07c2a2b2ee2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
